# services/api/router.go
@@ -261,6 +261,7 @@ func NewRouter(db *sqlx.DB, cfg Config) (*chi.Mux, error) {
 		// Jobs
 		// =======================================================================
 		r.Mount("/jobs", jobs.Routes())
+		r.Post("/bulk/jobs/launch", jobs.BulkLaunchJobs)
 
 		// =======================================================================
 		// Job Templates
